--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@yamori-design/react-components": "^0.2.0",
+    "@yamori-design/styles": "^0.3.0",
+    "i18next": "^23.16.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.0",
+    "sass": "^1.80.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
