--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npm install @yamori-design/react-components@latest @yamori-design/icons@latest @yamori-design/styles@latest"
   },
   "dependencies": {
-    "@yamori-design/react-components": "^0.5.0",
-    "@yamori-design/styles": "^0.4.1",
+    "@yamori-design/icons": "^1.0.0",
+    "@yamori-design/react-components": "^0.7.0",
+    "@yamori-design/styles": "^0.6.0",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
